# mujoco-toolbox

./: .buildinfo  .gitattributes  .gitignore  .releaserc.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CodeExample.ipynb  LICENSE  MUJOCO_LOG.TXT  MujocoHandler.py  README.md  bind.h  build.rs  builder.html  citation.cff  converted_urdf.xml  dev-requirements.txt  force_release.py  genindex.html  git_sync.sh  index.html  installation.html  mj_minimal_stubs.sh  mujoco_bindings.py  objects.inv  publish_all_tags.py  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  sim.html  submodules.html  usage.html  wrapper.html
.doctrees/: builder.doctree  environment.pickle  index.doctree  installation.doctree  sim.doctree  submodules.doctree  usage.doctree  wrapper.doctree
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: VersionGuide.txt  ci.yml  docs.yml  lint.yml  publish.yml  setup.yml  test.yml  type-checking.yml
MjWrapper/: MjWrapper.py  __init__.py
MujocoHandler/: MujocoHandler.py  __init__.py  box_and_leg.xml
_modules/: index.html
_modules/mujoco_toolbox/: assets.html  builder.html  controllers.html  sim.html  wrapper.html
_sources/: index.rst.txt  installation.rst.txt  sim.rst.txt  submodules.rst.txt  usage.rst.txt
_static/: custom.css  documentation_options.js
bindings/: mujoco_bindings.py
docs/: Makefile  assets.rst  builder.rst  conf.py  index.rst  submodules.rst  wrapper.rst
docs/_static/: custom.css
examples/: CodeExample.ipynb  box_and_leg.ipynb  digital_twin.py  glovebox_robot.py  optimized_api_demo.py  ur5e_glovebox.py
mujoco_toolbox/: Controller.py  Utils.py  Wrapper.py  __init__.py  assets.py  builder.py  controller.py  controllers.py  installation.py  loader.py  sim.py  utils.py  warnings.py  wrapper.py
mujoco_toolbox/templates/: glovebox.xml  urdf_compiler.xml
src/: lib.rs  sim.rs
tests/: performance.py  test_assets.py  test_builder.py  test_codec_fix.py  test_id.py  test_media.py  test_mjwrapper.py  test_performance.py  test_resolution_bug8.py  test_sim.py  test_sim_extra.py  test_utils.py  test_warnings.py  test_wrapper.py  test_wrapper_optimization.py  test_yml.py
tests/data/: performance_data.csv
tests/models/UR5/: UR5.urdf  ur5_robotiq_140.urdf
tests/models/UR5e/: README.md  ur5e.xml
tests/models/ur5/: ur5.urdf
tutorials/: Comparisons.md  How-to-Load-Meshes.md  README.md
